Version 2.6.2
* Fixes by Olaf Wuchnitz: print format for writing strings to FITS and argument order in memcpy
* Sniffer: keep one more amplitude digit
* Sniffer: apd and apc files: keep 2 more time digits
* Some compiler warning fixes
* Some cppcheck results from Martin Ettl

Version 2.6.1
* makefits: copy jobmatrix file
* makefits: fix naming: "makefilts.tmp" -> "makefits.tmp"
* difx2fits: Improve timestamp precision
* Require difxio 2.12.1
* Version for DiFX-1.5.2

Version 2.6
* Apply flags properly, even in cases with crazy subarraying
* Require difxio 2.12
* Write file that summarizes jobs that went into FITS
* Pass full command line option structure to UV writing
* Normalize calling to all table writing functions
* Properly populate GATEMODL table
* Write .jobmatrix file
* Require difxio 2.12
* Write new WEIGHTYP keyword
* Version for DiFX-1.5.1

Version 2.5
* Require difxio 2.11
* Post DiFX-1.5
* Sniffer: look for spectral lines

Version 2.4.1
* Write autocorrs for all pulsar bins
* Fix indexing by antennas after merging.  Affects: UV, MC, ML tables
* Check for existance of some data for each job being correlated
* Check for sniffer interval > tInt and change if needed

Version 2.4
* Post NRAO-DiFX 1.1 development
* Require difxio 2.5
* Fix numbering of FITS Source IDs
* Better handle transitional scans
* don't use bcopy -- use memcpy instead.
* fix sense of phase for LSB sniffer output data
* add makefits wrapper program
* Fix model tables when crossing midnight
* Version for DiFX-1.5

Version 2.3
* Support for writing FITS files larger than 2 GiB
* Option to force each input file into its own output file
* Pay attention to difx versions
* Don't write out vis records that occur over a scan change
* int -> double mjd for gain curve selection
* Respect DIFX_GROUP_ID and set umask
* Write sniffer file output
* Version for NRAO-DiFX 1.1

Version 2.2
* Use .im file to generate ML, MC table if file exists